--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,49 @@
 input {
     padding: 8px;
-    margin: 10px;
+    margin-right: 5px;
     border-radius: 4px;
+
+  }
+  
+  .location-input{
+    padding: 10px;
+    margin: 10px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+
   }
   
   button {
-    padding: 10px 15px;
+    padding: 8px 12px;
     background-color: #007bff;
     color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .fetch-button{
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 8px;
+    transition: background 0.3s ease;
+  }
+
+  .fetch-button:hover {
+    background-color: #0056b3;
   }
   
+  .loading, .no-data{
+    font-size: 18px;
+    color: white;
+    margin-top: 20px;
+  }
+
   h2 {
     color: #333;
   }
@@ -23,21 +55,79 @@ input {
   li {
     margin: 5px 0;
   }
-  .weather-container {
-    text-align: center;
-    margin-top: 20px;
-  }
+  .container {
+      text-align: center;
+      padding: 20px;
+      font-family: "Arial", sans-serif;
+      background: linear-gradient(135deg, #74ebd5, #acb6e5);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      border-radius: 20px;
+
+    }
   
   .weather-item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
+    background: linear-gradient(135deg, #74ebd5, #acb6e5);
+    color: white;
+    padding: 15px;
+    border-radius: 10px;
+    min-width: 150px;
+    text-align: center;
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease;
   }
   
   .weather-item span {
     font-size: 30px;
+  }
+
+  .weather-card{
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
+    max-width: 500px;
+    width: 100%;
+    margin-top: 20px;
+    flex-direction: column;
+    
+  }
+
+  .weather-list {
+  list-style: none;
+  padding: 0;
+  }
+  
+  .weather-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  .weather-item:last-child {
+    border-bottom: none;
+  }
+
+  .weather-item:hover {
+    transform: scale(1.05);
+  }
+
+  .hour {
+    font-weight: bold;
+    display: block;
+  }
+  
+  .temp, .humidity, .wind, .precip {
+    display: block;
+    font-size: 14px;
+  }
+
+  .weather-icon {
+   font-size: 30px;
+    margin-right: 10px;
   }
   
   
